# nikozdev

./: .gitattributes  .gitignore  README.md
doc/: .aaa  license.md  readme.md
docs/: readme.md
env/: CMakeLists.txt  DeprecatedMakefile  clang-format.yaml
env/cmake/: mHelpOpt.cmake
env/dCmake.dir/dHelp.dir/: fOpt.cmake  fRegex.cmake
env/dCmake.dir/dPack.dir/: fConfig.cmake.in
src/dNikoZDev.dir/: fHead.hxx  fMain.cxx  fMain.hxx
